// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GeneratePropsCpp can generate for 'ArrayPropsNativeComponent.js' 1`] = `
Object {
  "Props.cpp": "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GeneratePropsCpp.js
 */

#include <react/renderer/components/RNCodegenModuleFixtures/Props.h>
#include <react/renderer/components/image/conversions.h>
#include <react/renderer/components/view/conversions.h>
#include <react/renderer/core/PropsParserContext.h>
#include <react/renderer/core/propsConversions.h>

namespace facebook {
namespace react {

ArrayPropsNativeComponentViewProps::ArrayPropsNativeComponentViewProps(
    const PropsParserContext &context,
    const ArrayPropsNativeComponentViewProps &sourceProps,
    const RawProps &rawProps): ViewProps(context, sourceProps, rawProps),

    names(convertRawProp(context, rawProps, \\"names\\", sourceProps.names, {})),
    disableds(convertRawProp(context, rawProps, \\"disableds\\", sourceProps.disableds, {})),
    progress(convertRawProp(context, rawProps, \\"progress\\", sourceProps.progress, {})),
    radii(convertRawProp(context, rawProps, \\"radii\\", sourceProps.radii, {})),
    colors(convertRawProp(context, rawProps, \\"colors\\", sourceProps.colors, {})),
    srcs(convertRawProp(context, rawProps, \\"srcs\\", sourceProps.srcs, {})),
    points(convertRawProp(context, rawProps, \\"points\\", sourceProps.points, {})),
    edgeInsets(convertRawProp(context, rawProps, \\"edgeInsets\\", sourceProps.edgeInsets, {})),
    dimensions(convertRawProp(context, rawProps, \\"dimensions\\", sourceProps.dimensions, {})),
    sizes(convertRawProp(context, rawProps, \\"sizes\\", sourceProps.sizes, {static_cast<ArrayPropsNativeComponentViewSizesMask>(ArrayPropsNativeComponentViewSizes::Small)})),
    object(convertRawProp(context, rawProps, \\"object\\", sourceProps.object, {})),
    arrayOfObjects(convertRawProp(context, rawProps, \\"arrayOfObjects\\", sourceProps.arrayOfObjects, {}))
      {}

} // namespace react
} // namespace facebook
",
}
`;

exports[`GeneratePropsCpp can generate for 'BooleanPropNativeComponent.js' 1`] = `
Object {
  "Props.cpp": "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GeneratePropsCpp.js
 */

#include <react/renderer/components/RNCodegenModuleFixtures/Props.h>
#include <react/renderer/core/PropsParserContext.h>
#include <react/renderer/core/propsConversions.h>

namespace facebook {
namespace react {

BooleanPropNativeComponentViewProps::BooleanPropNativeComponentViewProps(
    const PropsParserContext &context,
    const BooleanPropNativeComponentViewProps &sourceProps,
    const RawProps &rawProps): ViewProps(context, sourceProps, rawProps),

    disabled(convertRawProp(context, rawProps, \\"disabled\\", sourceProps.disabled, {false})),
    disabledNullable(convertRawProp(context, rawProps, \\"disabledNullable\\", sourceProps.disabledNullable, {}))
      {}

} // namespace react
} // namespace facebook
",
}
`;

exports[`GeneratePropsCpp can generate for 'ColorPropNativeComponent.js' 1`] = `
Object {
  "Props.cpp": "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GeneratePropsCpp.js
 */

#include <react/renderer/components/RNCodegenModuleFixtures/Props.h>
#include <react/renderer/core/PropsParserContext.h>
#include <react/renderer/core/propsConversions.h>

namespace facebook {
namespace react {

ColorPropNativeComponentViewProps::ColorPropNativeComponentViewProps(
    const PropsParserContext &context,
    const ColorPropNativeComponentViewProps &sourceProps,
    const RawProps &rawProps): ViewProps(context, sourceProps, rawProps),

    tintColor(convertRawProp(context, rawProps, \\"tintColor\\", sourceProps.tintColor, {}))
      {}

} // namespace react
} // namespace facebook
",
}
`;

exports[`GeneratePropsCpp can generate for 'DimensionPropNativeComponent.js' 1`] = `
Object {
  "Props.cpp": "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GeneratePropsCpp.js
 */

#include <react/renderer/components/RNCodegenModuleFixtures/Props.h>
#include <react/renderer/components/view/conversions.h>
#include <react/renderer/core/PropsParserContext.h>
#include <react/renderer/core/propsConversions.h>

namespace facebook {
namespace react {

DimensionPropNativeComponentViewProps::DimensionPropNativeComponentViewProps(
    const PropsParserContext &context,
    const DimensionPropNativeComponentViewProps &sourceProps,
    const RawProps &rawProps): ViewProps(context, sourceProps, rawProps),

    marginBack(convertRawProp(context, rawProps, \\"marginBack\\", sourceProps.marginBack, {}))
      {}

} // namespace react
} // namespace facebook
",
}
`;

exports[`GeneratePropsCpp can generate for 'EdgeInsetsPropNativeComponent.js' 1`] = `
Object {
  "Props.cpp": "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GeneratePropsCpp.js
 */

#include <react/renderer/components/RNCodegenModuleFixtures/Props.h>
#include <react/renderer/core/PropsParserContext.h>
#include <react/renderer/core/propsConversions.h>

namespace facebook {
namespace react {

EdgeInsetsPropNativeComponentViewProps::EdgeInsetsPropNativeComponentViewProps(
    const PropsParserContext &context,
    const EdgeInsetsPropNativeComponentViewProps &sourceProps,
    const RawProps &rawProps): ViewProps(context, sourceProps, rawProps)

    
      {}

} // namespace react
} // namespace facebook
",
}
`;

exports[`GeneratePropsCpp can generate for 'EnumPropNativeComponent.js' 1`] = `
Object {
  "Props.cpp": "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GeneratePropsCpp.js
 */

#include <react/renderer/components/RNCodegenModuleFixtures/Props.h>
#include <react/renderer/core/PropsParserContext.h>
#include <react/renderer/core/propsConversions.h>

namespace facebook {
namespace react {

EnumPropNativeComponentViewProps::EnumPropNativeComponentViewProps(
    const PropsParserContext &context,
    const EnumPropNativeComponentViewProps &sourceProps,
    const RawProps &rawProps): ViewProps(context, sourceProps, rawProps),

    alignment(convertRawProp(context, rawProps, \\"alignment\\", sourceProps.alignment, {EnumPropNativeComponentViewAlignment::Center})),
    intervals(convertRawProp(context, rawProps, \\"intervals\\", sourceProps.intervals, {EnumPropNativeComponentViewIntervals::Intervals0}))
      {}

} // namespace react
} // namespace facebook
",
}
`;

exports[`GeneratePropsCpp can generate for 'EventNestedObjectPropsNativeComponent.js' 1`] = `
Object {
  "Props.cpp": "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GeneratePropsCpp.js
 */

#include <react/renderer/components/RNCodegenModuleFixtures/Props.h>
#include <react/renderer/core/PropsParserContext.h>
#include <react/renderer/core/propsConversions.h>

namespace facebook {
namespace react {

EventNestedObjectPropsNativeComponentViewProps::EventNestedObjectPropsNativeComponentViewProps(
    const PropsParserContext &context,
    const EventNestedObjectPropsNativeComponentViewProps &sourceProps,
    const RawProps &rawProps): ViewProps(context, sourceProps, rawProps),

    disabled(convertRawProp(context, rawProps, \\"disabled\\", sourceProps.disabled, {false}))
      {}

} // namespace react
} // namespace facebook
",
}
`;

exports[`GeneratePropsCpp can generate for 'EventPropsNativeComponent.js' 1`] = `
Object {
  "Props.cpp": "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GeneratePropsCpp.js
 */

#include <react/renderer/components/RNCodegenModuleFixtures/Props.h>
#include <react/renderer/core/PropsParserContext.h>
#include <react/renderer/core/propsConversions.h>

namespace facebook {
namespace react {

EventPropsNativeComponentViewProps::EventPropsNativeComponentViewProps(
    const PropsParserContext &context,
    const EventPropsNativeComponentViewProps &sourceProps,
    const RawProps &rawProps): ViewProps(context, sourceProps, rawProps),

    disabled(convertRawProp(context, rawProps, \\"disabled\\", sourceProps.disabled, {false}))
      {}

} // namespace react
} // namespace facebook
",
}
`;

exports[`GeneratePropsCpp can generate for 'FloatPropsNativeComponent.js' 1`] = `
Object {
  "Props.cpp": "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GeneratePropsCpp.js
 */

#include <react/renderer/components/RNCodegenModuleFixtures/Props.h>
#include <react/renderer/core/PropsParserContext.h>
#include <react/renderer/core/propsConversions.h>

namespace facebook {
namespace react {

FloatPropsNativeComponentViewProps::FloatPropsNativeComponentViewProps(
    const PropsParserContext &context,
    const FloatPropsNativeComponentViewProps &sourceProps,
    const RawProps &rawProps): ViewProps(context, sourceProps, rawProps),

    blurRadius(convertRawProp(context, rawProps, \\"blurRadius\\", sourceProps.blurRadius, {0.0})),
    blurRadius2(convertRawProp(context, rawProps, \\"blurRadius2\\", sourceProps.blurRadius2, {0.001})),
    blurRadius3(convertRawProp(context, rawProps, \\"blurRadius3\\", sourceProps.blurRadius3, {2.1})),
    blurRadius4(convertRawProp(context, rawProps, \\"blurRadius4\\", sourceProps.blurRadius4, {0.0})),
    blurRadius5(convertRawProp(context, rawProps, \\"blurRadius5\\", sourceProps.blurRadius5, {1.0})),
    blurRadius6(convertRawProp(context, rawProps, \\"blurRadius6\\", sourceProps.blurRadius6, {0.0})),
    blurRadiusNullable(convertRawProp(context, rawProps, \\"blurRadiusNullable\\", sourceProps.blurRadiusNullable, {}))
      {}

} // namespace react
} // namespace facebook
",
}
`;

exports[`GeneratePropsCpp can generate for 'ImagePropNativeComponent.js' 1`] = `
Object {
  "Props.cpp": "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GeneratePropsCpp.js
 */

#include <react/renderer/components/RNCodegenModuleFixtures/Props.h>
#include <react/renderer/components/image/conversions.h>
#include <react/renderer/core/PropsParserContext.h>
#include <react/renderer/core/propsConversions.h>

namespace facebook {
namespace react {

ImagePropNativeComponentViewProps::ImagePropNativeComponentViewProps(
    const PropsParserContext &context,
    const ImagePropNativeComponentViewProps &sourceProps,
    const RawProps &rawProps): ViewProps(context, sourceProps, rawProps),

    thumbImage(convertRawProp(context, rawProps, \\"thumbImage\\", sourceProps.thumbImage, {}))
      {}

} // namespace react
} // namespace facebook
",
}
`;

exports[`GeneratePropsCpp can generate for 'IntegerPropNativeComponent.js' 1`] = `
Object {
  "Props.cpp": "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GeneratePropsCpp.js
 */

#include <react/renderer/components/RNCodegenModuleFixtures/Props.h>
#include <react/renderer/core/PropsParserContext.h>
#include <react/renderer/core/propsConversions.h>

namespace facebook {
namespace react {

IntegerPropNativeComponentViewProps::IntegerPropNativeComponentViewProps(
    const PropsParserContext &context,
    const IntegerPropNativeComponentViewProps &sourceProps,
    const RawProps &rawProps): ViewProps(context, sourceProps, rawProps),

    progress1(convertRawProp(context, rawProps, \\"progress1\\", sourceProps.progress1, {0})),
    progress2(convertRawProp(context, rawProps, \\"progress2\\", sourceProps.progress2, {-1})),
    progress3(convertRawProp(context, rawProps, \\"progress3\\", sourceProps.progress3, {10}))
      {}

} // namespace react
} // namespace facebook
",
}
`;

exports[`GeneratePropsCpp can generate for 'InterfaceOnlyNativeComponent.js' 1`] = `
Object {
  "Props.cpp": "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GeneratePropsCpp.js
 */

#include <react/renderer/components/RNCodegenModuleFixtures/Props.h>
#include <react/renderer/core/PropsParserContext.h>
#include <react/renderer/core/propsConversions.h>

namespace facebook {
namespace react {

InterfaceOnlyNativeComponentViewProps::InterfaceOnlyNativeComponentViewProps(
    const PropsParserContext &context,
    const InterfaceOnlyNativeComponentViewProps &sourceProps,
    const RawProps &rawProps): ViewProps(context, sourceProps, rawProps),

    title(convertRawProp(context, rawProps, \\"title\\", sourceProps.title, {\\"\\"}))
      {}

} // namespace react
} // namespace facebook
",
}
`;

exports[`GeneratePropsCpp can generate for 'MultiNativePropNativeComponent.js' 1`] = `
Object {
  "Props.cpp": "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GeneratePropsCpp.js
 */

#include <react/renderer/components/RNCodegenModuleFixtures/Props.h>
#include <react/renderer/components/image/conversions.h>
#include <react/renderer/core/PropsParserContext.h>
#include <react/renderer/core/propsConversions.h>

namespace facebook {
namespace react {

MultiNativePropNativeComponentViewProps::MultiNativePropNativeComponentViewProps(
    const PropsParserContext &context,
    const MultiNativePropNativeComponentViewProps &sourceProps,
    const RawProps &rawProps): ViewProps(context, sourceProps, rawProps),

    thumbImage(convertRawProp(context, rawProps, \\"thumbImage\\", sourceProps.thumbImage, {})),
    color(convertRawProp(context, rawProps, \\"color\\", sourceProps.color, {})),
    thumbTintColor(convertRawProp(context, rawProps, \\"thumbTintColor\\", sourceProps.thumbTintColor, {})),
    point(convertRawProp(context, rawProps, \\"point\\", sourceProps.point, {}))
      {}

} // namespace react
} // namespace facebook
",
}
`;

exports[`GeneratePropsCpp can generate for 'NoPropsNoEventsNativeComponent.js' 1`] = `
Object {
  "Props.cpp": "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GeneratePropsCpp.js
 */

#include <react/renderer/components/RNCodegenModuleFixtures/Props.h>
#include <react/renderer/core/PropsParserContext.h>
#include <react/renderer/core/propsConversions.h>

namespace facebook {
namespace react {

NoPropsNoEventsNativeComponentViewProps::NoPropsNoEventsNativeComponentViewProps(
    const PropsParserContext &context,
    const NoPropsNoEventsNativeComponentViewProps &sourceProps,
    const RawProps &rawProps): ViewProps(context, sourceProps, rawProps)

    
      {}

} // namespace react
} // namespace facebook
",
}
`;

exports[`GeneratePropsCpp can generate for 'ObjectPropsNativeComponent.js' 1`] = `
Object {
  "Props.cpp": "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GeneratePropsCpp.js
 */

#include <react/renderer/components/RNCodegenModuleFixtures/Props.h>
#include <react/renderer/components/image/conversions.h>
#include <react/renderer/core/PropsParserContext.h>
#include <react/renderer/core/propsConversions.h>

namespace facebook {
namespace react {

ObjectPropsNativeComponentProps::ObjectPropsNativeComponentProps(
    const PropsParserContext &context,
    const ObjectPropsNativeComponentProps &sourceProps,
    const RawProps &rawProps): ViewProps(context, sourceProps, rawProps),

    objectProp(convertRawProp(context, rawProps, \\"objectProp\\", sourceProps.objectProp, {})),
    objectArrayProp(convertRawProp(context, rawProps, \\"objectArrayProp\\", sourceProps.objectArrayProp, {})),
    objectPrimitiveRequiredProp(convertRawProp(context, rawProps, \\"objectPrimitiveRequiredProp\\", sourceProps.objectPrimitiveRequiredProp, {}))
      {}

} // namespace react
} // namespace facebook
",
}
`;

exports[`GeneratePropsCpp can generate for 'PointPropNativeComponent.js' 1`] = `
Object {
  "Props.cpp": "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GeneratePropsCpp.js
 */

#include <react/renderer/components/RNCodegenModuleFixtures/Props.h>
#include <react/renderer/core/PropsParserContext.h>
#include <react/renderer/core/propsConversions.h>

namespace facebook {
namespace react {

PointPropNativeComponentViewProps::PointPropNativeComponentViewProps(
    const PropsParserContext &context,
    const PointPropNativeComponentViewProps &sourceProps,
    const RawProps &rawProps): ViewProps(context, sourceProps, rawProps),

    startPoint(convertRawProp(context, rawProps, \\"startPoint\\", sourceProps.startPoint, {}))
      {}

} // namespace react
} // namespace facebook
",
}
`;

exports[`GeneratePropsCpp can generate for 'StringPropNativeComponent.js' 1`] = `
Object {
  "Props.cpp": "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GeneratePropsCpp.js
 */

#include <react/renderer/components/RNCodegenModuleFixtures/Props.h>
#include <react/renderer/core/PropsParserContext.h>
#include <react/renderer/core/propsConversions.h>

namespace facebook {
namespace react {

StringPropNativeComponentViewProps::StringPropNativeComponentViewProps(
    const PropsParserContext &context,
    const StringPropNativeComponentViewProps &sourceProps,
    const RawProps &rawProps): ViewProps(context, sourceProps, rawProps),

    placeholder(convertRawProp(context, rawProps, \\"placeholder\\", sourceProps.placeholder, {\\"\\"})),
    defaultValue(convertRawProp(context, rawProps, \\"defaultValue\\", sourceProps.defaultValue, {}))
      {}

} // namespace react
} // namespace facebook
",
}
`;
